# notion-super-tags

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
src/tagz/: __main__.py  api.py  block.py  database.py  exceptions.py  extract.py  page.py  permissions.py  utils.py
tests/: conftest.py
tests/tagz/: test_database.py  test_extract.py  test_page.py
